# oxidedisk-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: generate_icon.ps1
src/: analyzer.rs  cleanup.rs  duplicates.rs  elevation.rs  main.rs  models.rs  scanner.rs  treemap.rs
src/ui/: cleanup.rs  dashboard.rs  duplicates.rs  file_table.rs  filter_bar.rs  mod.rs  treemap.rs
