[package]
name = "oxidedisk-analyzer"
version = "0.1.0"
edition = "2021"
description = "A fast, single-binary Windows 11 disk-usage analyzer (egui): scan, dashboard, file table, duplicate detection, temp cleanup, and tree map."
license = "MIT"
repository = "https://github.com/deffstudio/oxidedisk-analyzer"
authors = ["deffstudio"]
readme = "README.md"
keywords = ["disk", "storage", "analyzer", "duplicates", "egui"]
categories = ["gui", "filesystem"]

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = "0.29"
jwalk = "0.8"
sysinfo = "0.32"
chrono = "0.4"
rfd = "0.15"
rayon = "1"
blake3 = "1"
trash = "5"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
